among other things, fixes massive bug where game state wouldnt update and all player boxes would collapse to the center of the board. so far new frontend is working surprisingly well.

--- a/client/static/styles/main/styles-homepage.css
+++ b/client/static/styles/main/styles-homepage.css
@@ -24,6 +24,10 @@
         border-radius: 10px;
     }
 
+    .sortContainer button{
+        color: inherit;
+    }
+
     .sortContainer > button, .sortContainer > button:focus{
         background-color: rgba(0, 0, 0, 0);
         border: none rgba(0, 0, 0, 0);
